Remove DatatypeConverter Usage
Issue gh-626